# RFIDController

./: .gitmodules  CMakeLists.txt
CMake/: FindCryptoPP.cmake  FindLIBFREEFARE.cmake  FindLIBNFC.cmake
src/: ByteBuffer.h  CMakeLists.txt  Desfire.cpp  Desfire.h  DesfireKey.h  Exception.h  Utils.h  main.cpp
src/PCH/: PCH.h
